# ComfyUI-DeepseekOCR

./: .gitignore  DeepseekOCR.json  LICENSE  README.md  README_CN.md  config.py  flow_DeepseekOCR.json  io_utils.py  model_manager.py  nodes.py  pyproject.toml  requirements.txt  resolver.py
.github/workflows/: publish.yml
