[project]
name = "deepseekocr"
description = "A custom node that wraps DeepSeek-OCR as a ComfyUI plugin, providing powerful OCR recognition and document parsing capabilities."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# DeepSeek-OCR 官方依赖", "transformers>=4.46", "tokenizers>=0.20", "einops", "easydict", "addict", "# 插件运行依赖", "huggingface_hub>=0.26", "Pillow", "numpy", "# 模型自定义代码需要（trust_remote_code）", "matplotlib"]

[project.urls]
Repository = "https://github.com/Geo1230/ComfyUI-DeepseekOCR"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Geo1230/ComfyUI-DeepseekOCR/wiki"
"Bug Tracker" = "https://github.com/Geo1230/ComfyUI-DeepseekOCR/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-DeepseekOCR"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

